math-converter: Fix converter not visible when exchange rate refresh interval is set to never

--- a/src/ui/style.css
+++ b/src/ui/style.css
@@ -143,6 +143,10 @@ mathconverter textview:not(:first-child) {
   margin-top: 36px;
 }
 
+mathconverter statuspage > scrolledwindow > viewport > box {
+  margin: 0 12px;
+}
+
 .bit-panel {
   padding: 6px;
   transition: 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
